force-app/main/default/objects/AgileProjectResource__c/AgileProjectResource__c.object-meta.xml
<CustomObject>
    <label>Recurso do Projeto</label>
    <nameField>
        <label>Nome de Recurso do Projeto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recursos do Projeto</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>