force-app/main/default/objects/AgileProjectResource__c/fields/AgileProject__c.field-meta.xml
<CustomField>
    <fullName>AgileProject__c</fullName>
    <label>Projeto</label>
    <referenceTo>AgileProject__c</referenceTo>
    <relationshipLabel>Recursos do Projeto</relationshipLabel>
    <relationshipName>Recursos_do_Projeto</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>