force-app/main/default/objects/AgileProjectResource__c/fields/AgileResource__c.field-meta.xml
<CustomField>
    <fullName>AgileResource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recurso</label>
    <referenceTo>AgileResource__c</referenceTo>
    <relationshipLabel>Recursos do Projeto</relationshipLabel>
    <relationshipName>Recursos_do_Projeto</relationshipName>
    <type>Lookup</type>
</CustomField>