force-app/main/default/objects/AgileProjectResource__c/fields/FinalDate__c.field-meta.xml
<CustomField>
    <fullName>FinalDate__c</fullName>
    <label>Data de Fim</label>
    <required>true</required>
    <type>Date</type>
</CustomField>